--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
         
         <div class="content">
             <h1>The Rages Band</h1>
-            <p>I got blah blah matic</p>
+            <p>I got all these "Deceased Cemeteries" matic</p>
             <div id="liveCount">Live na Bilang ng Deceased Cemeteries: 460,702,201</div>
             
             <button id="channelButton" class="neon-button">Visit My Channel</button>
